--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,9 @@
   justify-content: center;
   align-items: center;
 }
-
+.center{
+  text-align: center;
+}
 .title a {
   color: #0070f3;
   text-decoration: none;
@@ -38,55 +40,77 @@
   font-size: 1.5rem;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition:
-    color 0.15s ease,
-    border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
 
 .logo {
   height: 1em;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.pagination {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  min-width: rem-calc(640);
+ }
+ 
+ .pageLink {
+  cursor: pointer;
+ }
+ 
+
+ .pageItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid rgb(136, 191, 236);
+  border-radius: 0.5rem;
+  cursor: pointer;
+ }
+ .rounded {
+   border-radius: 50%;
+ }
+ 
+ .pageItemActive {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid blue;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  background-color: rgb(136, 191, 236);
+ }
+
+ .userstable {
+  border: 1px solid rgb(100, 100, 250);
+  text-align: center;
+	vertical-align: middle;
+  min-width: rem-calc(640);
+ }
+ .userstableHead{
+  background-color: rgb(201, 215, 247);
+ }
+ .tr:nth-child(even){
+  background-color: rgb(201, 215, 247);
+}
+.cellWidthAvatar{
+  width:10%
+}
+.cellWidth{
+  width:50%;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
 }
